// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders homepage unchanged 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col justify-center items-center p-2 md:p-5"
  >
    <div
      aria-label="Notifications (F8)"
      role="region"
      style="pointer-events: none;"
      tabindex="-1"
    >
      <ol
        class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
        tabindex="-1"
      />
    </div>
    <div
      class="w-[90%] md:w-3/4 lg:w-1/2 items-center justify-between flex flex-row"
    >
      <div
        class="flex flex-row"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 mr-2"
        >
          <svg
            class="mr-1"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8Z"
            />
            <path
              d="M192 474h672q8 0 8 8v60q0 8-8 8H160q-8 0-8-8v-60q0-8 8-8Z"
            />
          </svg>
          Add a Book
        </button>
      </div>
      <div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 w-10"
        >
          <svg
            class="lucide lucide-moon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="w-full flex justify-center items-center mt-5"
    >
      <div
        class="w-[90%] md:w-3/4 lg:w-1/2"
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground grid w-full grid-cols-3"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:r0:-content-in-progress"
            aria-selected="true"
            class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:r0:-trigger-in-progress"
            role="tab"
            tabindex="-1"
            type="button"
          >
            In Progress
          </button>
          <button
            aria-controls="radix-:r0:-content-to-read"
            aria-selected="false"
            class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:r0:-trigger-to-read"
            role="tab"
            tabindex="-1"
            type="button"
          >
            To Read
          </button>
          <button
            aria-controls="radix-:r0:-content-completed"
            aria-selected="false"
            class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:r0:-trigger-completed"
            role="tab"
            tabindex="-1"
            type="button"
          >
            Completed
          </button>
        </div>
        <div
          aria-labelledby="radix-:r0:-trigger-completed"
          class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
          data-orientation="horizontal"
          data-state="inactive"
          hidden=""
          id="radix-:r0:-content-completed"
          role="tabpanel"
          tabindex="0"
        />
        <div
          aria-labelledby="radix-:r0:-trigger-to-read"
          class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
          data-orientation="horizontal"
          data-state="inactive"
          hidden=""
          id="radix-:r0:-content-to-read"
          role="tabpanel"
          tabindex="0"
        />
        <div
          aria-labelledby="radix-:r0:-trigger-in-progress"
          class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
          data-orientation="horizontal"
          data-state="active"
          id="radix-:r0:-content-in-progress"
          role="tabpanel"
          style="animation-duration: 0s;"
          tabindex="0"
        >
          <div
            class="flex flex-col justify-center items-center"
          >
            <div
              class="text-lg text-center h-[200px] flex justify-center items-center"
            >
              You haven't started reading any books yet
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test book tab 1`] = `
<div>
  <div
    class="w-[90%] md:w-3/4 lg:w-1/2"
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground grid w-full grid-cols-3"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <button
        aria-controls="radix-:r4:-content-in-progress"
        aria-selected="true"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-:r4:-trigger-in-progress"
        role="tab"
        tabindex="-1"
        type="button"
      >
        In Progress
      </button>
      <button
        aria-controls="radix-:r4:-content-to-read"
        aria-selected="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-:r4:-trigger-to-read"
        role="tab"
        tabindex="-1"
        type="button"
      >
        To Read
      </button>
      <button
        aria-controls="radix-:r4:-content-completed"
        aria-selected="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-:r4:-trigger-completed"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Completed
      </button>
    </div>
    <div
      aria-labelledby="radix-:r4:-trigger-completed"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r4:-content-completed"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="radix-:r4:-trigger-to-read"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r4:-content-to-read"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-labelledby="radix-:r4:-trigger-in-progress"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="active"
      id="radix-:r4:-content-in-progress"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      <div
        class="flex flex-col justify-center items-center"
      >
        <div
          class="
      w-full 
      p-4 
      flex 
      flex-row 
      justify-between 
      text-start 
      items-center
      bg-neutral-100
      false
    "
        >
          <div
            class="flex flex-row gap-2"
          >
            <div>
              1
              .
            </div>
            <div>
              test
            </div>
          </div>
          <div
            class="flex flex-row gap-2 items-center"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              data-state="closed"
              id="radix-:r8:"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
